# hello_automation

./: CMakeLists.txt  Jenkinsfile  conanfile.py  conanfile.txt  deploy_to_pi.sh  main.cpp
include/: my_hello.h
src/: CMakeLists.txt  main.cpp  my_hello.cpp  my_hello_shared.cpp
src/include/: my_hello.h  my_hello_shared.h
